# laikago_ros

./: README.md
a1_description/xacro/: robot.xacro
aliengo_description/xacro/: robot.xacro  robot1.xacro
laikago_controller/src/: joint_controller.cpp
laikago_description/launch/: laikago_rviz.launch
laikago_gazebo/: CMakeLists.txt  package.xml
laikago_gazebo/BalanceController/: BalanceController.cpp  BalanceController.hpp  QPLocomotion.cpp  QPLocomotion.h
laikago_gazebo/ConvexMPC/: ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h  RobotState.cpp  RobotState.h  SolverMPC.cpp  convexMPC_interface.h
laikago_gazebo/LeastSquareSolution/: LeastSquareSolution.cpp  LeastSquareSolution.hpp
laikago_gazebo/config/: robot_control_aliengo.yaml
laikago_gazebo/include/: ContactEstimator.h  ControlFSMData.h  CurrentState.h  DesiredCommand.h  FSM.h  GaitScheduler.h  LegController.h  PositionVelocityEstimator.h  Quadruped.h  StateEstimatorContainer.h  TransitionData.h  body.h  teleCmd.h
laikago_gazebo/launch/: a1.launch  aliengo.launch  gazebo.xacro  gazebo1.xacro  normal.launch  rough_terrain.launch  sloped.launch  stair.launch  two_robot.launch
laikago_gazebo/launch/world/: normal.world  rough_terrain.world  sloped.world  stair.world
laikago_gazebo/newMPC/: MPC_wrapper.cpp  MPC_wrapper.h  Solver.cpp  Solver.h
laikago_gazebo/plugin/: draw_force_plugin.cc
laikago_gazebo/src/: CurrentState.cpp  DesiredCommand.cpp  FSM.cpp  FSM_locomotion.cpp  FootSwingTrajectory.cpp  Gait.cpp  LegController.cpp  OrientationEstimator.cpp  PositionVelocityEstimator.cpp  body.cpp  teleCmd.cpp
laikago_gazebo/src/exe/: DRCL.cpp  addBlock.cpp  external_force.cpp  jump.cpp  leg_test.cpp  low_level_test.cpp  ori_test.cpp  reset.cpp  servo.cpp
laikago_msgs/: CMakeLists.txt
laikago_msgs/msg/: CheaterState.msg  IMU.msg  LowCmd.msg  LowState.msg  qp_controller_data_t.msg
optimization_data/: data_Ff.csv  data_Fr.csv  data_Q.csv  data_Qs.csv  data_tau.csv  jumping-A1Robot-SHINE-d100.mat  jumping_A1Robot_SHINE_d100.mat  jumping_up_platform_A1Robot_1ms_h50_d60.mat  parse_data.py  parse_data_new.py
result/: plots.py
